--- a/TP/BankonetSpringMVC/pom.xml
+++ b/TP/BankonetSpringMVC/pom.xml
@@ -173,7 +173,25 @@
 			<version>4.7</version>
 			<scope>test</scope>
 		</dependency>        
+	
+		<!-- Convertisseurs REST -->
+	
+		<dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-mapper-asl</artifactId>
+			<version>1.8.5</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.2.11</version>
+		</dependency>
+		
+	
 	</dependencies>
+	
+	
     <build>
         <plugins>
             <plugin>
